# sokil_drone

./: README.md
src/sokil_drone_controller/: CMakeLists.txt  package.xml
src/sokil_drone_controller/include/sokil_drone_controller/: pid.h
src/sokil_drone_controller/src/: pid.cpp
src/sokil_drone_description/: CMakeLists.txt  package.xml
src/sokil_drone_description/launch/: sokil_drone_base.launch
src/sokil_drone_description/urdf/: sokil_drone.urdf.xacro  sokil_drone_base.urdf.xacro
