<?xml version="1.0"?>
<package format="2">
  <name>sokil_drone_description</name>
  <version>0.0.0</version>
  <description>The sokil_drone_description package</description>

 
  <maintainer email="vitaliipepko@gmail.com">Vitalii Pepko</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
